--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.6.1",
+    "firebase": "^10.8.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-draggable-plus": "^0.3.5",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
