--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@supabase/supabase-js": "^2.39.8",
     "element-plus": "^2.6.1",
     "firebase": "^10.8.1",
     "pinia": "^2.1.7",
